part-1/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: hasanheroglu/todo-app:0.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
