part-1/todo-app/manifests/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      nodePort: 30081
      protocol: TCP
      port: 1235
      targetPort: 3333
